# digital_twin

./: .env.default  .env.example  .eslintrc.cjs  .gitignore  .pylintrc  README.md  config.toml  const.py  consumptions.py  dt.py  main.py  package-lock.json  package.json  plots.py  pyproject.toml  read_data.py  requirements.txt  tailwind.config.js  vite.config.js
api/: api.py  errors.py  schemas.py
data/: __init__.py  data_repository.py  models.py
data/appliances/: boiler.json  fridge_freezer.json  lamp_2.json  lamp_3.json  lamp_5.json  microwave.json  radio.json  tv_2.json  washing_machine.json
data/routines/: comfort.json  fridge.json  lights.json  wash.json
data/test_routines/: test.json
dt/: __init__.py  __main__.py  config.py  const.py  consumptions.py  costs.py  energy.py  plots.py
dt/api/: __init__.py  api.py  errors.py  schemas.py
dt/data/: __init__.py  data_repository.py  models.py
dt/frontend/: index.html  index.js  package-lock.json  package.json
frontend/: index.html  index.js  index_old.html  simulated_routines.json
frontend/components/: App.jsx  AppliancesList.jsx  AppliancesSection.jsx  ConsumptionChart.jsx  DayConsumptionChart.jsx  DigitalTwinContextProvider.jsx  ErrorBanner.jsx  RoutinesList.jsx  RoutinesSection.jsx  SimulateSection.jsx  SimulationResult.jsx  Title.jsx
frontend/test-routines/: no_conflict.json
frontend/test_routines/: conflicting_modes.json  max_power_exceeded.json  no_conflict.json
json/appliances/: air_conditioning.json  (+8 more)
models/: __init__.py  appliance.py  operation_mode.py  routine.py  routine_action.py
(+44 files in other folders)
